// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntersectIcon: Component should render correctly 1`] = `
<intersect.svg
  style={
    Object {
      "fill": "#1d1d20",
      "height": "30px",
      "width": "30px",
    }
  }
/>
`;

exports[`IntersectIcon: Component should render with custom styles 1`] = `
<intersect.svg
  style={
    Object {
      "fill": "blue",
      "height": "30px",
      "width": "30px",
    }
  }
/>
`;
